--- a/cfn-ingress-application.yaml
+++ b/cfn-ingress-application.yaml
@@ -1,14 +1,202 @@
 AWSTemplateFormatVersion: 2010-09-09
-Description: Example description
+Description: Deploys a stack for each applciation in the ingress VPC - ALB, CloudFront.
 
 Parameters:
-  ExampleParameter:
+# choice of AZs?
+# ip addresses of privatelink endpoints
+  ApplicationName:
     Type: String
-    Description: Example description
+    Description: Name of this application
+  EndpointServiceName:
+    Type: String
+    Description: Name of the endpoint service that was created for the application - something like 'com.amazonaws.vpce.ap-southeast-2.vpce-svc-01234567890abcdef'
+  EndpointIPAddressOne:
+    Type: String
+    Description: First IP address of the PrivateLink endpoint for this application
+  EndpointIPAddressTwo:
+    Type: String
+    Description: Second IP address of the PrivateLink endpoint for this application
  
 Outputs:
-  ExampleOutput:
-    Description: Example description
-    Value: !Ref example.value
+#  CloudFrontUrl:
+#    Description: Application CloudFront URL
+#    Value: !Sub 'https://${CloudFrontDistribution.DomainName}/'
+  EndpointIPAddresses:
+    Description: IP addresses for the application PrivateLink endpoint
+    Value: !GetAtt ApplicationEndpoint.NetworkInterfaceIds
+
+Mappings:
+#
+# If the deployment region is not in the list below, update in manually or
+# run the following command to retrieve all CloudFront prefix list ids for
+# regions that you are opted into:
+#
+# for REGION in $(aws ec2 describe-regions --query 'Regions[*].RegionName' --output text); do PREFIXLISTID=$(aws ec2 describe-managed-prefix-lists --region ${REGION} --query "PrefixLists[?PrefixListName=='com.amazonaws.global.cloudfront.origin-facing'].PrefixListArn" --output text | cut -f2 -d'/'); echo "    ${REGION}:"; echo "      PrefixList: ${PREFIXLISTID}"; done
+#
+  CloudFrontPrefixLists:
+    ap-south-2:
+      PrefixList: pl-0a25c3463226fcc61
+    ap-south-1:
+      PrefixList: pl-9aa247f3
+    eu-south-1:
+      PrefixList: pl-1bbc5972
+    eu-south-2:
+      PrefixList: pl-052dcbe0f793f19da
+    me-central-1:
+      PrefixList: pl-05266a86378662c23
+    il-central-1:
+      PrefixList: pl-0dd89524416301988
+    ca-central-1:
+      PrefixList: pl-38a64351
+    eu-central-1:
+      PrefixList: pl-a3a144ca
+    eu-central-2:
+      PrefixList: pl-00b37293991dbe6a8
+    us-west-1:
+      PrefixList: pl-4ea04527
+    us-west-2:
+      PrefixList: pl-82a045eb
+    af-south-1:
+      PrefixList: pl-c0aa4fa9
+    eu-north-1:
+      PrefixList: pl-fab65393
+    eu-west-3:
+      PrefixList: pl-75b1541c
+    eu-west-2:
+      PrefixList: pl-93a247fa
+    eu-west-1:
+      PrefixList: pl-4fa04526
+    ap-northeast-3:
+      PrefixList: pl-31a14458
+    ap-northeast-2:
+      PrefixList: pl-22a6434b
+    me-south-1:
+      PrefixList: pl-17b2577e
+    ap-northeast-1:
+      PrefixList: pl-58a04531
+    sa-east-1:
+      PrefixList: pl-5da64334
+    ap-east-1:
+      PrefixList: pl-14b2577d
+    ca-west-1:
+      PrefixList: pl-0530d4c590b35122b
+    ap-southeast-1:
+      PrefixList: pl-31a34658
+    ap-southeast-2:
+      PrefixList: pl-b8a742d1
+    ap-southeast-3:
+      PrefixList: pl-bca247d5
+    ap-southeast-4:
+      PrefixList: pl-0fb7e7cfe038ae0e9
+    us-east-1:
+      PrefixList: pl-3b927c52
+    us-east-2:
+      PrefixList: pl-b6a144df
 
 Resources:
+#  CloudFrontDistribution:
+#    Type: AWS::CloudFront::Distribution
+#    Properties:
+#      DistributionConfig:
+#        Comment: !Ref ApplicationName
+#        ViewerCertificate:
+#          CloudFrontDefaultCertificate: True
+#          MinimumProtocolVersion: TLSv1.2_2021
+#        DefaultRootObject: index.html
+#        Enabled: True
+#        HttpVersion: http2and3
+#        Origins:
+#        - DomainName: !GetAtt ALB.DNSName
+#          Id: !Sub 'Origin-${ApplicationName}'
+#          CustomOriginConfig:
+#            OriginProtocolPolicy: https-only
+#            OriginSSLProtocols:
+#            - TLSv1.2
+#          OriginCustomHeaders:
+#           - HeaderName: X-Shared-Ingress-Secret
+#             HeaderValue: !Ref ApplicationName
+#        DefaultCacheBehavior:
+#          TargetOriginId: !Sub 'Origin-${ApplicationName}'
+#          ViewerProtocolPolicy: allow-all
+#          CachePolicyId: 658327ea-f89d-4fab-a63d-7e88639e58f6
+#        PriceClass: PriceClass_All
+#      Tags:
+#      - Key: Name
+#        Value: !Ref ApplicationName
+
+  ALBSecurityGroup:
+    Type: AWS::EC2::SecurityGroup
+    Properties:
+      GroupDescription: !Sub 'Enable access to ${ApplicationName}'
+      VpcId: !ImportValue SharedIngressVpcId
+      SecurityGroupIngress:
+        - IpProtocol: tcp
+          FromPort: 443
+          ToPort: 443
+          SourcePrefixListId:  !FindInMap [CloudFrontPrefixLists, !Ref 'AWS::Region', PrefixList]
+      Tags:
+      - Key: Name
+        Value: !Ref ApplicationName
+
+  ALB:
+    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
+    Properties:
+      Name: !Sub '${ApplicationName}-Ingress'
+      Type: application
+      Scheme: internet-facing
+      IpAddressType: ipv4
+      SecurityGroups:
+      - !Ref ALBSecurityGroup
+      Subnets:
+      - !ImportValue SharedIngressPublicSubnetOneId
+      - !ImportValue SharedIngressPublicSubnetTwoId
+      Tags:
+      - Key: Name
+        Value: !Ref ApplicationName
+
+  ALBListener:
+    Type: AWS::ElasticLoadBalancingV2::Listener
+    Properties:
+      LoadBalancerArn: !Ref ALB
+      Port: 443
+      Protocol: HTTPS
+      DefaultActions:
+      - Order: 1
+        Type: forward
+        TargetGroupArn: !Ref ALBTargetGroup
+
+#  ALBListenerRule:
+#    Type: AWS::ElasticLoadBalancingV2::ListenerRule
+#    Properties:
+#      ListernArn: !Ref ALBListener
+#      Actions:
+#      Conditions:
+#      - HttHeaderConfig:
+#        HttpHeaderName: X-Shared-Ingress-Secret
+#        Values:
+#        - !Ref ApplicationName
+
+  ALBTargetGroup:
+    Type: AWS::ElasticLoadBalancingV2::TargetGroup
+    Properties:
+      Name: !Sub '${ApplicationName}-Ingress'
+      VpcId: !ImportValue SharedIngressVpcId
+      IpAddressType: ipv4
+      Port: 443
+      Protocol: HTTPS
+      TargetType: ip
+      Targets:
+      - Id: !Ref EndpointIPAddressOne
+        Port: 443
+      - Id: !Ref EndpointIPAddressTwo
+        Port: 443
+      Tags:
+      - Key: Name
+        Value: !Ref ApplicationName
+
+  ApplicationEndpoint:
+    Type: AWS::EC2::VPCEndpoint
+    Properties:
+      ServiceName: !Ref EndpointServiceName
+      VpcEndpointType: Interface
+      VpcId: !ImportValue SharedIngressVpcId
