--- a/cfn-application-workload.yaml
+++ b/cfn-application-workload.yaml
@@ -6,18 +6,19 @@ Parameters:
     Type: String
     Description: Name of this application
   LatestAmiId:
-    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
-    Description: Amazon Linux AMI id
+    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
+    Description: Latest Amazon Linux AMI id
+    Default: '/aws/service/ami-amazon-linux-latest/al2023-ami-kernel-default-x86_64'
  
 Resources:
   AutoscalingGroup:
     Type: AWS::AutoScaling::AutoScalingGroup
     Properties:
-      MaxSize: 1
-      MinSize: 1
-      LoadBalancerNames:
+      MaxSize: 2
+      MinSize: 2
+      TargetGroupARNs:
       - Fn::ImportValue:
-          !Sub '${ApplicationName}-NLBARN'
+          !Sub '${ApplicationName}-NLBTargetGroupARN'
       LaunchTemplate:
         LaunchTemplateId: !Ref LaunchTemplate
         Version: !GetAtt LaunchTemplate.LatestVersionNumber
@@ -44,37 +45,13 @@ Resources:
           ToPort: 80
           SourceSecurityGroupId:
             Fn::ImportValue:
-              !Sub '${ApplicationName}-ApplicationNLBSGId'
+              !Sub '${ApplicationName}-NLBSGId'
       Tags:
       - Key: Name
         Value: !Sub '${ApplicationName}-EC2'
 
   LaunchTemplate:
     Type: AWS::EC2::LaunchTemplate
-    Metadata:
-      AWS::CloudFormation::Init:
-        config:
-          files:
-            "/home/ec2-user/index.html":
-              content: !Sub |
-                <html>
-                  <head>
-                    <title>Test Page</title>
-                  </head>
-                  <body>
-                    <h1>Nothing to see here - move along</h1>
-                    <div>Although this proves the web server is working</div>
-                  </body>
-                </html>
-              mode: "000644"
-              owner: ec2-user
-              group: ec2-user
-            "/home/ec2-user/crontab.user":
-              content: !Sub | 
-                * * * * * (cd /home/ubuntu; python3 -m http.server 2> /dev/null)
-              mode: "000644"
-              owner: ec2-user
-              group: ec2-user
     Properties:
       LaunchTemplateData:
         ImageId: !Ref LatestAmiId
@@ -82,17 +59,32 @@ Resources:
         SecurityGroupIds:
         - !Ref EC2SecurityGroup
         BlockDeviceMappings:
-        - DeviceName: "/dev/xvda"
+        - DeviceName: '/dev/xvda'
           Ebs:
-            VolumeType: "gp3"
+            VolumeType: 'gp3'
             VolumeSize: 8
             Iops: 3000
         UserData:
           Fn::Base64: !Sub |
             #!/bin/bash -xe
-            cd /hoome/ec2-user
-            crontab -u ec2-user crontab.user
+            cd /home/ec2-user
+            cat > index.html << END
+            <html>
+              <head>
+                <title>Test Page</title>
+              </head>
+              <body>
+                <h1>Nothing to see here - move along</h1>
+                <div>Although this proves the web server is working</div>
+                <div>${AWS::StackName}</div>
+                <div>HOSTNAME<div>
+              </body>
+            </html>
+            END
+            sed -i s/HOSTNAME/`hostname`/ index.html
+            nohup python3 -m http.server 80 >/dev/null 2>&1 &
       TagSpecifications:
-      - Tags:
+      - ResourceType: 'launch-template'
+        Tags:
         - Key: Name
           Value: !Ref ApplicationName
